Update ansible.cfg: Comment out log_path setting Update inventory.tpl: Remove condition for ocibastionpubip in allservers group Add updatesecrets.yml: Add playbook to update secrets in Kubernetes Update installargocd.yml: Patch ConfigMap and Secret, reload deployment Add registercluster.yml: Configure ArgoCD Cluster Add updateroutes.yml: Apply Kubernetes resource files for routes

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 private_key_file = /home/ubuntu/.ssh/id_rsa
-log_path = ./ansible.log
+; log_path = ./ansible.log
 timeout=60
 gather_timeout = 60
 [ssh_connection]
